--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,8 @@
 = ramix
 
-Description goes here.
+Ramix is a command-line tool for initializing a new rails application.Just the same as rails but adding more additional options.
+
+similar project: {rails_wizard}[https://github.com/intridea/rails_wizard] {rails_apps_composer}[https://github.com/RailsApps/rails_apps_composer]
 
 == Contributing to ramix
  
