--- a/README.rdoc
+++ b/README.rdoc
@@ -4,7 +4,7 @@ Ramix is a command-line tool for initializing a new rails application.Just the s
 
 similar project: {rails_wizard}[https://github.com/intridea/rails_wizard]  {rails_apps_composer}[https://github.com/RailsApps/rails_apps_composer]
 
-== Usage
+=== Usage
 
 The Usage like `rails new APP_PATH`
 
@@ -16,7 +16,7 @@ type
 
 You will find all options supported.
 
-== Getting Started
+=== Getting Started
 
 
     gem install ramix
